<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000FF"
    android:orientation="vertical"
    android:weightSum="18" >

    <!-- Title -->

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/relativeLayout"
        android:background="#FF0000"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/center_title_text"
        android:textSize="14sp" />

    <!-- User info -->

    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_below="@id/textViewTitle"
        android:adjustViewBounds="true"
        android:background="#00FF00"
        android:contentDescription="@string/user_icon"
        android:paddingTop="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/user_icon" />

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTitle"
        android:layout_toRightOf="@id/user_icon"
        android:background="#00FF00"
        android:gravity="center"
        android:paddingTop="5dp"
        android:text="@string/user_name"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewUserDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewUserName"
        android:layout_toRightOf="@id/user_icon"
        android:layout_above="@id/display_map"
        android:background="#00FF00"
        android:gravity="center"
        android:paddingTop="5dp"
        android:text="@string/user_description"
        android:textSize="14sp" />

    <!-- Options and display -->


    <!-- Options -->

    <LinearLayout
        android:id="@+id/linearButtonList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_icon"
        android:background="#00FFFF"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:weightSum="3" >

        <Button
            android:id="@+id/buttonViewProfile"
            android:layout_width="95dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/view_profile" />

        <Button
            android:id="@+id/buttonLoadInfo"
            android:layout_width="95dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/load_info" />

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="95dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/update" />
    </LinearLayout>

    <!-- Display -->

    <ImageView
        android:id="@+id/display_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/linearButtonList"
        android:layout_gravity="center"
        android:layout_toRightOf="@id/linearButtonList"
        android:adjustViewBounds="true"
        android:background="#336600"
        android:contentDescription="@string/display_map"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/display_map" />

    <Button
        android:id="@+id/buttonLocalize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/display_map"
        android:layout_gravity="center"
        android:layout_toRightOf="@id/linearButtonList"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/localize" />

    <!-- Bottom Text -->

    <TextView
        android:id="@+id/textViewBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLocalize"
        android:background="#336600"
        android:scrollHorizontally="true"
        android:text="@string/bottom_text"
        android:textColor="#FF0000" />

</RelativeLayout>