<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0000FF"
        android:orientation="vertical" >

        <!-- Title -->

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="#FF0000"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/center_title_text"
            android:textSize="14sp" />

        <!-- User info -->

        <RelativeLayout
            android:id="@+id/relativeUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTitle"
            android:background="#00FF00" >

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_alignParentLeft="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/user_icon"
                android:paddingTop="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/user_icon" />

            <TextView
                android:id="@+id/textViewUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/user_icon"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/user_name"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewUserDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/textViewUserName"
                android:layout_toRightOf="@id/user_icon"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/user_description"
                android:textSize="14sp" />
        </RelativeLayout>
        <!-- Options and display -->


        <!-- Options -->

        <LinearLayout
            android:id="@+id/linearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/relativeUser"
            android:background="#00FFFF"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:weightSum="3" >

            <Button
                android:id="@+id/buttonViewProfile"
                android:layout_width="95dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/view_profile" />

            <Button
                android:id="@+id/buttonLoadInfo"
                android:layout_width="95dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/load_info" />

            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="95dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/update" />
        </LinearLayout>

        <!-- Display -->

        <LinearLayout
            android:id="@+id/linearDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/linearButton"
            android:layout_below="@id/relativeUser"
            android:layout_gravity="center"
            android:layout_toRightOf="@id/linearButton"
            android:background="#336600"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/display_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/display_map"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/display_map" />

            <Button
                android:id="@+id/buttonLocalize"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/localize" />
        </LinearLayout>

        <!-- Bottom Text -->

        <TextView
            android:id="@+id/textViewBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/linearDisplay"
            android:background="#336600"
            android:scrollHorizontally="true"
            android:text="@string/bottom_text"
            android:textColor="#FF0000" />
    </RelativeLayout>

</ScrollView>